--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,25 @@
 body {
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+.square {
+    width: 90px;
+    height: 90px;
+    border: 1px solid black;
+}
+
+#set-grid {
+    width: 150px;
+    height: 25px;
 }
